--- a/client/nav.jade
+++ b/client/nav.jade
@@ -14,7 +14,7 @@ template(name='nav')
         // a.icon.item.set_movies.mobile.hidden(href="/s/movies" class="{{isActiveRoute '/s/movies'}}")
         //     i.film.icon
         a.icon.item(href="/" class="{{isActiveRoute '/'}}")
-            i.yin.yang.large.icon
+            i.yin.yang.icon
             // i.heart.icon
             // |home
         a.icon.item.set_users(href="/users" class="{{isActiveRoute '/users'}}")
