--- a/client/post.jade
+++ b/client/post.jade
@@ -3,7 +3,7 @@ template(name='post_view')
         .ui.stackable.grid
             .row 
                 .twelve.wide.column
-                    a.ui.large.button(href="/")
+                    a.ui.large.circular.icon.basic.button(href="/")
                         i.chevron.left.icon
                     // a.ui.large.button(href="/g/#{group}")
                     //     i.chevron.left.icon
