--- a/client/home.jade
+++ b/client/home.jade
@@ -17,6 +17,7 @@ template(name='home')
                     +tag_select icon='dna' tag='biology'
                     +tag_select icon='heart' tag='love'
                     +tag_select icon='moon' tag='tarot'
+                    +tag_select icon='dog' tag='dog'
             if picked_tags
                 .ui.left.icon.large.transparent.input
                     if is_loading
