--- a/client/group.jade
+++ b/client/group.jade
@@ -232,39 +232,39 @@ template(name='flat_group_tag_picker')
 template(name='group_post_card_small')
     .left.aligned.column
         .content.zoomer
-            // a.ui.header.zoomer(href="/#{group}/p/#{_id}") #{title}
-            a.ui.left.aligned.small.header.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
+            // a.ui.header.zoomer(href="/g/#{group}/p/#{_id}") #{title}
+            a.ui.left.aligned.small.header.view_post(href="/g/#{group}/p/#{_id}" class=emotion_color)
                 |!{data.title} #{title}
             if embed
                 span.rounded.full
                     |!{embed}
                 div
             else if is_image
-                a.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
+                a.view_post(href="/g/#{group}/p/#{_id}" class=emotion_color)
                     img.ui.fluid.rounded.image.toggle_view(src=data.url)
             else if watson.metadata.image.length
-                a.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
+                a.view_post(href="/g/#{group}/p/#{_id}" class=emotion_color)
                     img.ui.fluid.rounded.image.toggle_view(src=watson.metadata.image)
             else if data.thumbnail_width
-                a.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
+                a.view_post(href="/g/#{group}/p/#{_id}" class=emotion_color)
                     img.ui.fluid.rounded.image.zoomer(src=data.thumbnail)    
             if image_id
-                a(href="/#{group}/p/#{_id}")
+                a(href="/g/#{group}/p/#{_id}")
                     img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
             if image_link
-                a(href="/#{group}/p/#{_id}")
+                a(href="/g/#{group}/p/#{_id}")
                     +image_link_view key='image_link' direct=true
             if youtube_id
                 +youtube_view key='youtube_id' label='youtube id' direct=true
             if is_admin
                 +text_edit key='group' label='slug' direct=true
-            a(href="/#{group}/p/#{_id}")
+            a(href="/g/#{group}/p/#{_id}")
                 |!{content}
                 if raw
                     |!{raw}
             each five_tags
                 +flat_group_tag_picker
-            a.ui.icon.button(href="/#{group}/p/#{_id}")
+            a.ui.icon.button(href="/g/#{group}/p/#{_id}")
                 i.right.chevron.icon
         | #{data.ups}
         i.thumbs.up.outline.grey.icon
@@ -298,28 +298,28 @@ template(name='doc_item')
                 div
             else if is_image
                 .column
-                    a.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
+                    a.view_post(href="/g/#{group}/p/#{_id}" class=emotion_color)
                         img.ui.fluid.rounded.image.toggle_view(src=data.url)
             else if watson.metadata.image.length
                 .column
-                    a.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
+                    a.view_post(href="/g/#{group}/p/#{_id}" class=emotion_color)
                         img.ui.rounded.inline.image.toggle_view(src=watson.metadata.image)
             else if data.thumbnail.length
                 .column
-                    a.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
+                    a.view_post(href="/g/#{group}/p/#{_id}" class=emotion_color)
                         img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
             // else if data.thumbnail.length
             //     .column
-            //         a.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
+            //         a.view_post(href="/g/#{group}/p/#{_id}" class=emotion_color)
             //             img.ui.rounded.inline.image.zoomer(src=data.thumbnail)    
             // .column
-            a.ui.inline.header.view_post.zoomer(href="/#{group}/p/#{_id}" class=emotion_color)
+            a.ui.inline.header.view_post.zoomer(href="/g/#{group}/p/#{_id}" class=emotion_color)
                 strong #{data.ups}:
                 |!{data.title} 
                 // span.inline.content
             if watson.analyzed_text
                 // .spacer
-                a.f11.view_post(href="/#{group}/p/#{_id}" class=emotion_color)
+                a.f11.view_post(href="/g/#{group}/p/#{_id}" class=emotion_color)
                     |{{trunc watson.analyzed_text}}...
             .ui.label 
                 i.clock.icon
@@ -333,13 +333,13 @@ template(name='doc_item')
             // if watson
             //     +doc_emotion_small
             // if skv_is 'view_detail' true
-            // a.ui.header.view_post.zoomer(href="/#{group}/p/#{_id}" class=emotion_color)
+            // a.ui.header.view_post.zoomer(href="/g/#{group}/p/#{_id}" class=emotion_color)
             //     strong #{data.ups}:
             //     |!{data.title} 
             // span.inline.content
                     
-            a.say.goto_post(href="/#{group}/p/#{_id}" class=emotion_color) !{data.body}
-            a.say(href="/#{group}/p/#{_id}" class=emotion_color) !{data.html}
+            a.say.goto_post(href="/g/#{group}/p/#{_id}" class=emotion_color) !{data.body}
+            a.say(href="/g/#{group}/p/#{_id}" class=emotion_color) !{data.html}
             // .spacer
             // if parsed_selftext_html
             //     .ui.segment
@@ -354,7 +354,7 @@ template(name='doc_item')
             //         |{{nl2br data.body}}
             // if data.body_html
             //     div
-            //     a.pointer.say(href="/#{group}/p/#{_id}" class=emotion_color)
+            //     a.pointer.say(href="/g/#{group}/p/#{_id}" class=emotion_color)
             //         |!{data.body_html}
             
             each tags
