--- a/parts/group_post.jade
+++ b/parts/group_post.jade
@@ -3,13 +3,11 @@ template(name='group_post_view')
         .ui.stackable.grid
             .row 
                 .twelve.wide.column
-                    a.ui.large.circular.icon.basic.button(href="/")
+                    a.ui.large.button(href="/g/#{group}")
                         i.chevron.left.icon
-                    // a.ui.large.button(href="/g/#{group}")
-                    //     i.chevron.left.icon
-                    //     |#{group}
+                        |#{group}
                     .ui.inline.header.say(class=emotion_color)
-                        |!{data.title} #{data.link_title}
+                        |#{title}
                     .scrolling
                         if image_link
                             a(href="/#{group}")
@@ -19,11 +17,9 @@ template(name='group_post_view')
                                 img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
                         if youtube_id
                             +youtube_view key='youtube_id' label='youtube id' direct=true
-                        if raw 
-                            |!{raw}
                         .say_this.say_body
                             |!{content}
-                        | {{ufrom data.created}}
+                        | {{when}}
                         div
                         // +skve k='view_section' v='main' l='main' i='content'
                         // +skve k='view_section' v='comments' l='comments' i='comment'
@@ -38,8 +34,6 @@ template(name='group_post_view')
                         if is_image
                             a.view_post(href="/#{subreddit}/p/#{_id}" class=emotion_color)
                                 img.ui.fluid.zoomer.rounded.image.toggle_view(src=data.url)
-                        else if data.is_reddit_media_domain
-                            img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
                         else if watson.metadata.image
                             img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
                         if is_youtube
@@ -47,29 +41,8 @@ template(name='group_post_view')
                             // .ui.fluid.embed
                             //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
                             iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
-                        else if embed
-                            span.f11.full
-                                |!{embed}
-                        if data.link_url
-                            img.ui.image.pointer.call_visual(src=data.link_url)
                         div
-                        span.f12.say !{data.html}
-                        // if parsed_selftext_html
-                        //     .ui.segment
-                        //         |!{parsed_selftext_html}
-                        if data.selftext
-                            // .ui.segment
-                            .f12.say
-                                |{{#markdown}} {{data.selftext}} {{/markdown}}
-                        else if data.body
-                            div
-                            .f12.say
-                                |{{nl2br data.body}}
-                        else if data.body_html
-                            div
-                            .f12.say
-                                |!{data.body_html}
-                        else if watson.analyzed_text
+                        if watson.analyzed_text
                             .say.f12
                                 |{{nl2br watson.analyzed_text}}
                         // iframe(width="100%" height="600" src="https://v.redd.it/9vk3khyb08e51/DASH_360.mp4?source=fallback" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
@@ -80,11 +53,8 @@ template(name='group_post_view')
                         // .rounded
                         //     |!{embed}
                         // if skv_is 'view_section' 'watson'
-                        +rcomments_tab
                         // +watson_full
                         // if skv_is 'view_section' 'related'
-                        +post_related
-                        +related_questions
                         if skv_is 'view_section' 'tone'
                             +tone
                             // +skve k='view_section' v='money' l='money' i='money'
@@ -125,15 +95,7 @@ template(name='group_post_view')
                         a.ui.basic.fluid.button(href=data.url target="_window" title=data.url) 
                             i.external.icon
                             |url
-                        .ui.large.basic.label
-                            | #{data.domain}
-                        unless data.is_reddit_media_domain    
-                            if data.thumbnail
-                                img.ui.fluid.rounded.image.pointer.call_thumbnail.zoomer(src=data.thumbnail)
                         // .ui.header #{data.domain}
-                        a.ui.basic.button(href="https://www.reddit.com#{data.permalink}" target="_window") 
-                            i.external.grey.icon
-                            |r/#{data.subreddit}
                         .spacer
                         // a.ui.basic.button(href="https://www.reddit.com/user/#{author}" target='_window')
                         a.ui.basic.button.goto_ruser(href="/user/#{data.author}")
@@ -150,17 +112,33 @@ template(name='group_post_view')
                         //     | #{data.url}
                         if in_dev
                             .ui.small.header reddit_id #{data.reddit_id}
-                        .ui.basic.label
-                            i.comment.outline.icon
-                            |#{data.comment_count}
-                        .ui.basic.label
-                            i.thumbs.up.outline.icon
-                            |#{data.ups}
-                        |{{to_percent data.upvote_ratio}}%
-                        .ui.small.inline.header #{data.num_crossposts} crossposts
                         |#{tags.length}
                         each tags
                             +flat_tag_picker
                     .ui.basic.button.get_post permalink #{permalink}
-                    .ui.label #{data.ups}
+                    .ui.label #{points}
                         
+template(name='group_post_edit')
+    with doc_by_id
+        .ui.stackable.padded.grid
+            .row
+                .four.wide.column.scrolling
+                    a.ui.icon.big.button(href="/#{group}/p/#{_id}" title='save')
+                        i.checkmark.big.icon
+                    .ui.inline.header 
+                        i.pencil.icon
+                        |edit group post
+                    i.large.link.red.remove.icon.delete_post
+                    +image_edit key='image_id' label='image' direct=true
+                    div 
+                    +array_edit key='tags' label='tags' direct=true
+                    +link_edit key='link' label='link' direct=true
+                    +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    +raw_edit key='raw' label='raw' direct=true
+                .twelve.wide.column.scrolling
+                    +text_edit key='title' label='title' direct=true
+                    +html_edit key='content' label='content' direct=true
+                    +image_link_edit key='image_link' direct=true
+                    +youtube_edit key='youtube_id' label='youtube id' direct=true
+        
