--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -408,14 +408,14 @@ template(name='voting_full')
         span(title='points') #{points} pts
         //- .ui.large.basic.label(title='anon points') #{anon_points} anon pts
     if upvoter_ids
-        div
+        // div
         .ui.small.grey.inline.header(title='upvoters')
             i.thumbs.up.outline.green.icon
             //- |upvoters
         each upvoter_ids
             +user_info
     if downvoter_ids
-        div
+        // div
         .ui.small.grey.inline.header(title='downvoters')
             i.thumbs.down.outline.icon
             //- |downvoters
